--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -28,4 +28,5 @@
     <string name="title">Title</string>
     <string name="might_interest_you">אולי יעניין אותך</string>
     <string name="what_do_you_like">איזה סוג אוכל אתה מחפש?</string>
+    <string name="search">search</string>
 </resources>
