--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="title">Title</string>
     <string name="might_interest_you">Might interest you</string>
     <string name="what_do_you_like">What kind of food do you like?</string>
+    <string name="search">search</string>
 </resources>
