--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -29,4 +29,5 @@
     <string name="might_interest_you">אולי יעניין אותך</string>
     <string name="what_do_you_like">איזה סוג אוכל אתה מחפש?</string>
     <string name="search">search</string>
+    <string name="previously_searched">Previously searched</string>
 </resources>
