--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,5 @@
     <string name="might_interest_you">Might interest you</string>
     <string name="what_do_you_like">What kind of food do you like?</string>
     <string name="search">search</string>
-    <string name="previously_searched">Previously searched</string>
+    <string name="previously_searched">Previously viewed</string>
 </resources>
