--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -30,4 +30,5 @@
     <string name="what_do_you_like">איזה סוג אוכל אתה מחפש?</string>
     <string name="search">search</string>
     <string name="previously_searched">Previously searched</string>
+    <string name="filter">Filter</string>
 </resources>
