--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -31,4 +31,5 @@
     <string name="search">search</string>
     <string name="previously_searched">Previously searched</string>
     <string name="filter">Filter</string>
+    <string name="previous_search">No search history found</string>
 </resources>
